[package]
name = "solo2"
version = "0.1.0"
authors = ["SoloKeys Developers"]
edition = "2021"
rust-version = "1.56"
repository = "https://github.com/solokeys/solo2-cli"
description = "Library and CLI for the SoloKeys Solo 2 security key"
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/solo2"

[[bin]]
name = "solo2"
required-features = ["cli"]

[dependencies]
log = "0.4.14"
anyhow = "1.0.40"
chrono = "0.4.19"
# ctap-hid-fido2 = "2.1.1"
data-encoding = "2.3.2"
flexiber = { version = "0.1.0", features = ["std"] }
hex = "0.4.3"
hex-literal = "0.3.1"
iso7816 = "0.1.0-alpha.0"
lpc55 = "0.1.0-alpha.8"
pcsc = "2.4.0"
# reqwest = { version = "0.11", features = ["json"] }
rust-crypto = "^0.2"
serde_json = "1.0.64"
sha-1 = "0.9.6"
sha2 = "0.9.5"
x509-parser = { version = "0.12.0", features = ["verify"] }

# download
dialoguer = "0.9"
indicatif = "0.16.2"
ureq = { version = "2.1.1", features = ["json"] }

# cli
atty = { version = "0.2.14", optional = true }
clap = { version = "2.33.3", optional = true }
ctrlc = { version = "3.2.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }
pretty_env_logger = { version = "0.4.0", optional = true }

# dev-pki
p256 = { version = "0.9.0", optional = true, features = ["pkcs8"] }
pkcs8 = { version = "0.8", optional = true, features = ["alloc"] }
rand_core = { version = "0.6.2", optional = true }
rcgen = { version = "0.8.11", optional = true }
yasna = { version = "0.4.0", optional = true }

# needed in build.rs
[build-dependencies]
clap = { version = "2.33.3", default-features = false }
lazy_static = "1.4.0"

[features]
default = ["cli"]
cli = ["atty", "clap", "ctrlc", "lazy_static", "pretty_env_logger"]
dev-pki = ["p256", "pkcs8", "rand_core", "rcgen", "yasna"]
# It's not allowed to use the network when building for docs.rs, and the same
# for most corporate networks. The tests behind this flag do things like downloading
# certificates from Solo 2 PKI public data.
network-tests = []
