[package]
name = "solo2"
version = "0.2.2"
authors = ["SoloKeys, built with Trussed®."]
edition = "2021"
rust-version = "1.60"
repository = "https://github.com/solokeys/solo2-cli"
description = "Library and CLI for the SoloKeys Solo 2 security key"
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/solo2"

[[bin]]
name = "solo2"
required-features = ["cli"]

[dependencies]
log = "0.4.14"
anyhow = "1.0.40"
# ctap-hid-fido2 = "2.1.1"
data-encoding = "2.3.2"
flexiber = { version = "0.1.0", features = ["std"] }
getrandom = "0.2"
hex = "0.4.3"
hex-literal = "0.3.1"
hidapi = { version = "2", default-features = false, features = ["linux-static-hidraw"] }
iso7816 = "0.1.0"
lpc55 = "0.2"
# TODO: replace use of lazy_static with once_cell in CLI,
# even though we no longer use this in our CTAP impl.
# once_cell = "1.8"
pcsc = "2.4"
# reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.64"
sha1 = "0.10"
sha2 = "0.10"
time = "0.3"
x509-parser = { version = "0.14.0", features = ["verify"] }

# download
dialoguer = "0.10"
indicatif = "0.17"
ureq = { version = "2.1.1", features = ["json"] }

# cli
atty = { version = "0.2.14", optional = true }
clap = { version = "4", features = ["cargo", "derive"], optional = true }
clap_complete = { version = "4", optional = true }
clap-verbosity-flag = { version = "2", optional = true }
ctrlc = { version = "3.2.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }
pretty_env_logger = { version = "0.4.0", optional = true }

# dev-pki
p256 = { version = "0.12", optional = true, features = ["pkcs8"] }
pkcs8 = { version = "0.9", optional = true, features = ["alloc"] }
rand_core = { version = "0.6.2", optional = true }
rcgen = { version = "0.10", optional = true }
yasna = { version = "0.5.0", optional = true }
webbrowser = "0.8"

# needed in build.rs
[build-dependencies]
clap = { version = "4", features = ["cargo", "derive"] }
clap_complete = "4"
clap-verbosity-flag = "2"
lazy_static = "1.4.0"

[features]
default = ["cli"]
cli = ["atty", "clap", "clap_complete", "clap-verbosity-flag", "ctrlc", "lazy_static", "pretty_env_logger"]
dev-pki = ["p256", "pkcs8", "rand_core", "rcgen", "yasna"]
# It's not allowed to use the network when building for docs.rs, and the same
# for most corporate networks. The tests behind this flag do things like downloading
# certificates from Solo 2 PKI public data.
network-tests = []
